fixed bug with accountdiv not showing up again after closing and unable to update credentials from accountdiv

--- a/public/css/allImages.css
+++ b/public/css/allImages.css
@@ -39,6 +39,7 @@ h1 {
 }
 
 .imgDiv {
+    background: var(--backgroundColor);
     overflow: hidden;
     
     position: relative;
